@@ -36,6 +36,13 @@ Changed
   the right.
 - `:yank` can now yank the pretty/decoded URL by adding `--pretty`
 
+Fixed
+~~~~~
+
+- Fixed crash when using `:tab-{prev,next,focus}` right after closing the last
+  tab with `last-close` set to `close`.
+
+
 v0.6.1
 -----
 
